add title & favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset='utf-8'>
+<title>Bit Focus</title>
+<link rel='shortcut icon' href='http://blog.bitfoc.us/favicon.ico'>
 <script src='jq.js'></script>
 <style>
 * {
