--- a/index.html
+++ b/index.html
@@ -35,46 +35,35 @@ a.label {
 
 a.label:hover {
     cursor: pointer;
-    text-decoration: none;
-}
-
-.bullet {
-    color: #ddd;
-    position: relative;
-    opacity: 0.8;
-    text-align: center;
-}
-
-.bullet a {
-    color: #cde;
-}
-
-.bullet a:hover {
     color: white;
     text-decoration: none;
+}
+
+#n:hover {
+    cursor: pointer;
 }
 </style>
 </head>
 <body>
 <div class='parent'>
 <div class='aa' id='display'><span id='lt_anchor'>.</span>--.
-|  |                               <span id='bullet_anchor'> </span>
-|  |       ___  ___
-|  |       \_|  |  |
+|  |
+|  |       <span id='ny'>___</span>  ___
+|  |       <span id='nx'>\_|</span>  |  |
 |  |____  ____  |  |___
 |       \ `.  | |      |
 |  .--.  | |  | |  .---'
 |  |  |  | |  | |  |
-|  |  |  | |  | |  |      .::::::.
+|  |<span id='n'>  </span>|  | |  | |  |      .::::::.
 |  |  |  | |  | |  |      ::::::::
 |  `--'  | |  | |  '---.  ::::
 \_______/ /___| \______/  ::::
                           :::::::: .::::::. .::::::. :::  ::: .::::::.
-                          :::::::: :::::::: :::::::: :::  ::: ::''''':
-     <a href='http://blog.bitfoc.us/' class='label'>Blog</a>                 ::::     :::  ::: :::      :::  ::: ::.....
-              <a href='https://twitter.com/neuront' class='label'>Twitter</a>     ::::     :::  ::: :::      :::  :::  '''''::
-    <a href='https://github.com/neuront' class='label'>Codes</a>                 ::::     :::::::: :::::::: :::::::: :.....::
-              <a href='javascript:void(0)' class='label'>About</a>       ::::     `::::::' `::::::' `::::::' `<span class='label'>::::::</span>'
+    <a href='http://blog.bitfoc.us/' class='label'>Blog</a>                  :::::::: :::::::: :::::::: :::  ::: ::''''':
+                          ::::     :::  ::: :::      :::  ::: ::.....
+        <a href='https://github.com/neuront' class='label'>Codes</a>             ::::     :::  ::: :::      :::  :::  '''''::
+                          ::::     :::::::: :::::::: :::::::: :.....::
+            <a href='https://twitter.com/neuront' class='label'>Twitter</a>       ::::     `::::::' `::::::' `::::::' `::::::'
                                                                       <span id='rb_anchor'>&nbsp;</span></div>
 </div>
 <div class='parent' id='canvas'></div>
