update hover effect

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ body {
     line-height: 0.96em;
 }
 
-a.label {
+a {
     color: #cfb;
     text-decoration: underline;
 }
 
-a.label:hover {
+a:hover {
     cursor: pointer;
     color: white;
     text-decoration: none;
@@ -48,7 +48,7 @@ a.label:hover {
 <div class='parent'>
 <div class='aa' id='display'><span id='lt_anchor'>.</span>--.
 |  |
-|  |       <span id='ny'>___</span>  ___
+|  |       <span id='ny'>___</span>  ___             <span id='bullet_anchor'> </span>
 |  |       <span id='nx'>\_|</span>  |  |
 |  |____  ____  |  |___
 |       \ `.  | |      |
